remove expire time contract

--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="form-group">
-      <div class="label_item">Ngày hết hạn hợp đồng <span class="require_star">*</span></div>
+      <div class="label_item">Ngày hết hiệu lực hợp đồng</div>
       <div>
         <p-calendar [(ngModel)]="this.datasForm.expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
           aria-placeholder="chọn ngày hết hạn hợp đồng" dateFormat="dd/mm/yy"></p-calendar>
