--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -153,15 +153,10 @@
   <div class="row">
     <div class="col-md-5">
       <div class="form-group">
-        <div class="label_item">{{'Ngày hết hạn hợp đồng' | translate}} <span class="require_star">*</span></div>
+        <div class="label_item">{{'Ngày hết hiệu lực hợp đồng' | translate}}</div>
         <div>
           <p-calendar [(ngModel)]="expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
             dateFormat="dd/mm/yy"></p-calendar>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="invalid" *ngIf="this.nextStep1 === true && (this.expire_time == null || this.expire_time == undefined)">
-          {{'Ngày hết hạn hợp đồng không được để trống'}}
         </div>
       </div>
     </div>
