--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -138,7 +138,7 @@
               <div class="col-md-12">
                 <div>{{'Mật khẩu cấp 1' | translate}}</div>
                 <div>
-                      <div [innerHTML]="password1Hsm" class="input_text"></div>
+                      <div [innerHTML]="password1Hsm" class="input_text_pw"></div>
                   </div>
               </div>
             </div>
