--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -213,7 +213,7 @@
             <div class="col-md-12">
               <div>{{'Mật khẩu cấp 1' | translate}}</div>
               <div class="input-data">
-                <input type="text" formControlName="password1Hsm">
+                <input class="pw" type="text" formControlName="password1Hsm">
               </div>
             </div>
           </div>
