--- a/src/app/main/user/infor-user/infor-user.component.scss
+++ b/src/app/main/user/infor-user/infor-user.component.scss
@@ -33,6 +33,16 @@
       padding: 5px 5px 5px 15px;
   }
 }
+
+input.pw {
+  -webkit-text-security: disc;
+}
+
+.icon-password{
+  position: relative;
+  margin-left: 25%;
+}
+
 .cancel-button{
   border: 0px;
   border-radius: 5px;
