--- a/src/app/main/user/infor-user/infor-user.component.scss
+++ b/src/app/main/user/infor-user/infor-user.component.scss
@@ -34,6 +34,33 @@
   }
 }
 
+.input-line {
+  border: 1px solid #106DB6;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+
+  > input, div {
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding-left: 15px;
+  }
+  > div{
+    padding: 5px 15px;
+  }
+}
+
+.input-text {
+  border: 0;
+  background: #EFF2F5;
+  padding: 10px;
+  width: 100%;
+  outline:0px;
+  border-radius: 0 5px 5px 0;
+}
+
 input.pw {
   -webkit-text-security: disc;
 }
