--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -194,9 +194,9 @@
             <div class="row">
               <div class="col-md-12">
                 <div>{{'Mật khẩu cấp 1' | translate}}</div>
-                <div class="input-data">
+                <div class="input-line">
                   <input *ngIf="this.fieldTextType === false" class="pw" type="text" formControlName="password1Hsm" id="password1Hsm">
-                  <input *ngIf="this.fieldTextType === true" type="text" formControlName="password1Hsm" id="password1Hsm"/>
+                  <input class="input-text" *ngIf="this.fieldTextType === true" type="text" formControlName="password1Hsm" id="password1Hsm"/>
                     <div class="icon-password">
                       <i class="fa"
                         [ngClass]="{
