--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
@@ -1,46 +1,51 @@
 <div class="container-fluid">
-  <div style="text-align: center; font-weight: bold">
-    <h3 style="color: #106DB6; font-weight: bold">{{this.datas.title}}</h3>
+  <div class="header">
+    <h3 class="label-header">{{this.datas.title | translate}}</h3>
   </div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
-    <div class="name-item">
-      <div class="label_item">Mã số thuế: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
-        <input autocomplete="off" type="text" formControlName="tax_code" class="input-text" placeholder="Nhập tên người dùng" autofocus>
+  <form class="content">
+      <div class="row">
+          <div class="col-md-12">
+              <div class="label text-color">{{'Mã số thuế' | translate}} <span class="required-title">*</span></div>
+              <div class="input-data">
+                  <input type="text" formControlName="taxCode" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" autofocus>
+              </div>
+          </div>
       </div>
-    </div>
 
-    <div class="name-item">
-      <div class="label_item">Tên người dùng: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
-        <input autocomplete="off" type="text" formControlName="name" class="input-text" placeholder="Nhập tên người dùng" autofocus>
+      <div class="row" style="padding-top: 10px;">
+          <div class="col-md-12">
+              <div class="label text-color">{{'Tên người dùng' | translate}} <span class="required-title">*</span></div>
+              <div class="input-data">
+                  <input type="text" formControlName="username">
+              </div>
+          </div>
       </div>
-    </div>
 
-    <div class="name-item">
-      <div class="label_item">Mật khẩu cấp 1: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
-        <input autocomplete="off" type="password" formControlName="password1" class="input-text" placeholder="Nhập mật khẩu">
+      <div class="row" style="padding-top: 10px;">
+        <div class="col-md-12">
+            <div class="label text-color">{{'Mật khẩu cấp 1' | translate}} <span class="required-title">*</span></div>
+            <div class="input-data">
+                <input type="password" formControlName="pass1">
+            </div>
+        </div>
       </div>
-    </div>
 
-    <div class="name-item">
-      <div class="label_item">Mật khẩu cấp 2: <span class="require_star">*</span></div>
-      <div class="form-control input-line">
-        <input autocomplete="off" type="password" formControlName="password2" class="input-text" placeholder="Nhập mật khẩu">
+      <div class="row" style="padding-top: 10px;">
+        <div class="col-md-12">
+            <div class="label text-color">{{'Mật khẩu cấp 2' | translate}} <span class="required-title">*</span></div>
+            <div class="input-data">
+                <input type="password" formControlName="pass2">
+            </div>
+        </div>
       </div>
-    </div>
-
-    <div class="select-option">
-      <button
-        class="dx-button-form dx-button-close dx-button-90"
-        (click)="dialog.closeAll()"
-        type="button">Thoát
-      </button>
-      <button
-        class="dx-button-form dx-button-submit dx-button-90"
-        type="default">Xác nhận
-      </button>
-    </div>
+  
+      <div class="row" style="justify-content: center;padding-top: 10px;">
+          <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'Thoát' | translate}}</button>
+          <button class="save-button">{{'Xác nhận' | translate}}</button>
+      </div>
   </form>
 </div>
+
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+  <p style="font-size: 18px; color: white">Đang xử lý...</p>
+</ngx-spinner>
