--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
@@ -1,40 +1,57 @@
-//@font-face {
-//  font-family:font_lexend_deca;
-//  src:url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('ttf');
-//  font-weight:normal;
-//  font-style:normal;
-//}
+.header{
+  text-align: center; 
+  font-weight: bold
+}
+.label-header{
+  color: #106DB6; 
+  font-family: inherit; 
+  text-transform: uppercase;
+}
+.required-title {
+  color: red;
+}
 
-.content {
-  .name-item {
-    .require_star {
-      color: red;
-    }
-    .form-control > input {
+.input-data {
+  border: 1px solid #106DB6;
+  border-radius: 5px;
+  height: 33px;
+  display: flex;
+  align-items: center;
+
+  > img {
+      padding-left: 14px;
+  }
+
+  > input {
       border: none;
       outline: none;
-    }
-  }
-
-  .name-item:not(:last-child) {
-    margin-bottom: 10px;
-  }
-
-  .select-option {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 29px;
-    button {
-      width: 91px;
-      height: 31px;
       border-radius: 5px;
-      border: none;
-      color: white;
-      background-color: #8B8B8B;
-      cursor: pointer;
-    }
-    button:nth-last-child(1) {
-      background-color: #106DB6;
-    }
+      padding: 5px 10px;
+      width: 100%;
   }
+}  
+.cancel-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #8B8B8B;
+  font-size: 13px;
+  margin: 0 10px;
+}
+.save-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #106DB6;
+  font-size: 13px;
+  margin: 0 10px;
+}
+.invalid{
+  color: red;
 }
