--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -18,8 +18,7 @@
 <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
   <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
   <div class="skeleton-sign" (click)="doEditText()" *ngIf="!checkShowEdit">
-    <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{sign.valueSign ? sign.valueSign : ((sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng')}}</span>
-
+    <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
   <div class="skeleton-sign" *ngIf="checkShowEdit">
     <input type="text" class="input-edit-text" [(ngModel)]="sign.valueSign" (blur)="doneEditTextSign()" #inputEditText>
