--- a/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-unit/admin-detail-unit.component.html
@@ -139,6 +139,16 @@
               width="16px"
               style="cursor: pointer"
             />
+            <!-- <img (click)="editUnitPack(list.serviceId)"
+              src="../../../assets/img/icon_edit.svg"
+              width="20px"
+              style="cursor: pointer"
+            />&nbsp;&nbsp;
+            <img (click)="deleteUnitPack(list.serviceId)"
+              src="../../../assets/img/icon_delete.svg"
+              width="16px"
+              style="cursor: pointer"
+            /> -->
           </td>
         </tr>
       </ng-template>
