--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -1,4 +1,4 @@
-<!--begin template-->
+begin template
 <div class="container-fluid">
   <div class="contract-determine">
     <div style="margin-right: 50px">
