--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -76,19 +76,33 @@
             <u class="label text-color" (click)="addOriganzationReviewer()">{{'btn.add.user.view' | translate}}</u>
           </div>
         </div>
+
 <!--        to chuc cua toi - nguoi ky-->
         <div class="participants-border">
           <div class="label">{{'user.sign' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
+
             <input [id]="'ordering-sign-' + index" class="col-md-1 contract-total"
               (focusout)="onChangeValue($event,'ordering-sign-' + index)" style="width: 25px; height: 25px"
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
               [disabled]="getOriganzationSignature().length == 1">
+              
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+              <!-- <div class="participants--input">
+                <div class="participants__name">
+                  <div class="label_detail text-color"><input type="radio"></div>
+                </div>
+                <div class="participants__name">
+                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                </div>
+              </div> -->
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
+                  <!--Trường nhập họ và tên cho người ký tổ chức của tôi-->
                   <div class="input-data">
                     <img src="assets/img/icon_name.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"
@@ -96,6 +110,7 @@
                       (ngxInputSearch)="doTheSearch($event, index, 'signature')" [(ngModel)]="d.name"
                       (focusout)="onFocusOut($event, d)">
                   </div>
+
                   <div class="search-name"
                     *ngIf="this.arrSearch[index] && this.arrSearchNameSignature && arrSearchNameSignature.length > 0">
                     <button class="search-name-items" *ngFor="let t of this.arrSearchNameSignature"
@@ -315,18 +330,6 @@
           [(ngModel)]="item.name"
           [disabled]="item.type == 3"
         />
-        <!-- <div style="margin-left: 5px;width: 110px">
-          {{ "Mã số thuế" | translate | uppercase }}&nbsp;<span style="color: red" *ngIf="this.flagUSBToken === true || this.flagUSBTokenDocument === true">*</span
-          >
-        </div>
-        <input
-          class="input2"
-          type="text"
-          placeholder="{{
-            (item.type == 2 || item.type == 3 ? 'Nhập mã số thuế' : '') | translate
-          }}"
-          [(ngModel)]="item.tax_code"
-        /> -->
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length > 1" style="display: flex; justify-content: flex-end">
