--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -90,14 +90,29 @@
               
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
 
-              <!-- <div class="participants--input">
+              <!--Chọn ký bằng email hoặc số điện thoại-->
+              <div class="participants--input" style="display: flex">
                 <div class="participants__name">
-                  <div class="label_detail text-color"><input type="radio"></div>
+                  <div class="label_detail text-color">
+                    <div>
+                      <input type="radio"/>
+                    </div>&nbsp;
+                    <div>
+                      Ký bằng email
+                    </div>
+                  </div>
                 </div>
                 <div class="participants__name">
-                  <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
+                  <div class="label_detail text-color">
+                    <div>
+                      <input type="radio"/>
+                    </div>&nbsp;
+                    <div>
+                      Ký bằng số điện thoại
+                    </div>
+                  </div>
                 </div>
-              </div> -->
+              </div>
 
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -213,6 +228,31 @@
               type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                <!--Chọn ký bằng email hoặc số điện thoại-->
+                <div class="participants--input" style="display: flex">
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input type="radio"/>
+                      </div>&nbsp;
+                      <div>
+                        Ký bằng email
+                      </div>
+                    </div>
+                  </div>
+                  <div class="participants__name">
+                    <div class="label_detail text-color">
+                      <div>
+                        <input type="radio"/>
+                      </div>&nbsp;
+                      <div>
+                        Ký bằng số điện thoại
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -453,6 +493,31 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                 [disabled]="getPartnerSignature(item).length == 1 ">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                  <!--Chọn ký bằng email hoặc số điện thoại-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng email
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng số điện thoại
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
@@ -569,6 +634,31 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                 [disabled]="getPartnerDocument(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                  <!--Chọn ký bằng email hoặc số điện thoại-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng email
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng số điện thoại
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
@@ -669,6 +759,31 @@
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                 [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
+
+                  <!--Chọn ký bằng email hoặc số điện thoại-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng email
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input type="radio"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng số điện thoại
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
